--- a/style_main.css
+++ b/style_main.css
@@ -3,6 +3,8 @@ body {
 }
 
 header {
-  background-color: #F9F6ED;
-  height: 80px;
+    display: flex;
+    background-color: #F9F6ED;
+    height: 80px;
+    
 }
