--- a/style_main.css
+++ b/style_main.css
@@ -6,5 +6,10 @@ header {
     display: flex;
     background-color: #F9F6ED;
     height: 80px;
-    
+    justify-content: center;
+    font-family: "Headland One", serif;
+    font-size: 15px;
+    color: #361C12;
 }
+
+
